# DSAengine

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  AGENT_ORIENTED_ERROR_HANDLING_PLAN.md  CLAUDE.md  CORRUPTION_INCIDENT_REPORT.md  Cargo.toml  Dockerfile  README.md  RECOVERY_SCRIPT.py  RENDER_DEPLOY.md  augment-guidelines.md  discovery_manifest.json  errors.txt  generate_manifest.py  implementation_plan.md  implementation_plan_mcp  install.ps1  install.sh  refector_engine.py  render.yaml  test_error.txt  tmp_body.json
.agent/rules/: dsaengine.md
.dsaengine/: mcp-config.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
.kiro/steering/: dsaengine.md
docs/: DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  MCP_ARCHITECTURE.md
docs/setup/: CLAUDE_SETUP.md  CURSOR_SETUP.md  WINDSURF_SETUP.md
examples/: analyze_git_repo.rs  solve_shopify_metric.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: check_health.sh  fuzz_payloads.sh  memory_stress.sh  predeploy_check.sh  run_skill_golden.sh  set_random_master_api_key.py
src/: lib.rs  main.rs  mcp_common.rs  mcp_stdio.rs  skill_routes.rs  web_server.rs
src/skills/: mod.rs
src/skills/advanced_topics/: bit_manipulation.rs  bloom_filter.rs  consistent_hashing.rs  lfu_cache.rs  lru_cache.rs  mod.rs  segment_tree_lazy.rs  skip_list.rs  suffix_array.rs  trie_autocomplete.rs  union_find.rs
src/utils/: api_docs.rs  classifier.rs  complexity.rs  executor.rs  logger.rs  mod.rs  responses.rs  rules_generator.rs
templates/: cursorrules.tmpl  windsurfrules.tmpl
tests/: api_smoke.rs
(+143 files in other folders)
